Add a bunch of stuff before stream