@@ -1,17 +1,17 @@
-package theomenden.polyprolene.models;
+package theomenden.polyprolene.providers;
 
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.option.GameOptions;
 import net.minecraft.client.option.KeyBinding;
 import theomenden.polyprolene.client.PolyproleneClient;
 import theomenden.polyprolene.interfaces.ISuggestionProvider;
+import theomenden.polyprolene.models.KeyBindSuggestion;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-public class VanillaKeyBindingSuggestions implements ISuggestionProvider {
+public class VanillaKeyBindingSuggestionProvider implements ISuggestionProvider {
     private static final String[] DANGEROUS_BINDINGS = new String[]{
             "key.use",
             "key.attack",
@@ -30,12 +30,16 @@ public class VanillaKeyBindingSuggestions implements ISuggestionProvider {
 
     private static final Set<String> PREVENT_YOU_FROM_USING_THESE_BINDINGS = Set.of(DANGEROUS_BINDINGS);
 
-    protected KeyBinding[] getAllKeys(GameOptions options) {
+    protected static KeyBinding[] getAllKeys(GameOptions options) {
         return options.allKeys;
     }
 
-    protected KeyBindSuggestion createKeyBindSuggestion(KeyBinding binding) {
+    protected static KeyBindSuggestion createKeyBindSuggestion(KeyBinding binding) {
         return new KeyBindSuggestion(binding);
+    }
+
+    private static boolean checkForUnboundOrHiddenBindings(KeyBinding bind) {
+        return bind.isUnbound() || !PolyproleneClient.configuration.hideCurrentlyBoundKeys;
     }
 
     public void addKeyBindingSuggestions(List<KeyBindSuggestion> bindings) {
@@ -44,12 +48,8 @@ public class VanillaKeyBindingSuggestions implements ISuggestionProvider {
                 .filter(bind ->
                         checkForUnboundOrHiddenBindings(bind)
                                 && !PREVENT_YOU_FROM_USING_THESE_BINDINGS.contains(bind.getTranslationKey()))
-                .map(this::createKeyBindSuggestion)
-                .collect(Collectors.toList()));
-    }
-
-    private boolean checkForUnboundOrHiddenBindings(KeyBinding bind) {
-        return bind.isUnbound() || !PolyproleneClient.configuration.hideCurrentlyBoundKeys;
+                .map(VanillaKeyBindingSuggestionProvider::createKeyBindSuggestion)
+                .toList());
     }
 
 }
